--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -16,12 +16,17 @@ jobs:
           result=$?
           #resultado de la ejecución de los tests
           echo "::set-output name=result::$result"
+          echo "::set-env name=TEST_RESULT::$result"
   agregar_meme:
     runs-on: ubuntu-latest
     needs: test
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Obtener resultado de los tests
+        run: |
+            resultado_tests=${TEST_RESULT:-1}
+        
       - name: Agregar meme al readme
         uses: ./
         with:
