workflow-action-readme

--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -16,7 +16,9 @@ jobs:
           result=$?
           #resultado de la ejecución de los tests
           echo "::set-output name=result::$result"
-          echo "::set-env name=TEST_RESULT::$result"
+      - name: set environment file
+        run: |
+          echo "TEST_RESULT=${{ steps.test_job.outputs.result }}" >> $GITHUB_ENV
   agregar_meme:
     runs-on: ubuntu-latest
     needs: test
