--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -17,7 +17,6 @@ jobs:
           result=$?
           #resultado de la ejecución de los tests
           echo "::set-output name=result::$result"
-          echo "TEST_RESULT=${{ steps.test_job.outputs.result }}" >> $GITHUB_ENV
      
   agregar_meme:
     runs-on: ubuntu-latest 
@@ -28,14 +27,19 @@ jobs:
         uses: actions/checkout@v3
       - name: Obtener resultado de los tests
         run: |
-            resultado_tests=${TEST_RESULT:1}
+            #si no recibe parametros la variable es 1
+            if [ -z "${{ needs.test.outputs.result }}" ]; then
+              echo "resultado_tests=1" >> $GITHUB_ENV
+            else
+              echo "resultado_tests=${{ needs.test.outputs.result }}" >> $GITHUB_ENV
+            fi
         
       - name: Agregar meme al readme
         uses: ./
         with:
           frase_positiva: "Los tests han funcionado y lo sabes"
           frase_negativa: "Los tests han fallado y lo sabes"
-          resultado_tests: ${{ needs.test.outputs.resultado_tests}}
+          resultado_tests: ${{ needs.test.outputs.resultado_tests }}
       - name: Ejecutar código
         run: |
           npm install
