--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fs": "0.0.1-security",
     "jest": "^27.4.3",
     "memejs": "^1.2.3",
+    "memes-js": "^1.0.8",
     "python": "^0.0.4"
   }
 }
