--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "canvas": "^2.11.0",
     "fs": "0.0.1-security",
     "jest": "^27.4.3",
-    "python": "^0.0.4"
+    "python": "^0.0.4",
+    "random-memes": "^3.1.7"
   }
 }
