workflow-action-readme

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jest": "^27.4.3",
     "memejs": "^1.2.3",
     "memes-js": "^1.0.8",
+    "node-meme": "^1.0.0",
     "python": "^0.0.4"
   }
 }
